--- a/package.json
+++ b/package.json
@@ -1,13 +1,26 @@
 {
 
   "name": "auraforwardblocker",
+
   "version": "1.0.0",
+
   "main": "main.js",
+
   "repository": "GuikiPT:GuikiPT/AuraForwardBlocker",
+
   "author": "<foxzillapt17@gmail.com>",
+
   "license": "",
+
   "dependencies": {
+
+    "axios": "^1.7.7",
+
     "discord.js": "^14.16.3",
+
     "dotenv": "^16.4.5"
+
   }
+
 }
+
