--- a/package.json
+++ b/package.json
@@ -1,26 +1,19 @@
 {
-
   "name": "auraforwardblocker",
-
   "version": "1.0.0",
-
   "main": "main.js",
-
   "repository": "GuikiPT:GuikiPT/AuraForwardBlocker",
-
-  "author": "<foxzillapt17@gmail.com>",
-
+  "author": "GuikiPT",
   "license": "",
-
   "dependencies": {
-
     "axios": "^1.7.7",
-
+    "better-logging": "^5.0.0",
+    "colors": "^1.4.0",
     "discord.js": "^14.16.3",
-
-    "dotenv": "^16.4.5"
-
+    "dotenv": "^16.4.5",
+    "figlet-promised": "^1.0.0",
+    "fs": "^0.0.1-security",
+    "moment": "^2.30.1",
+    "path": "^0.12.7"
   }
-
 }
-
