--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
   "name": "auraforwardblocker",
   "version": "1.0.0",
-  "main": "main.js",
+  "main": "start.js",
   "repository": "GuikiPT:GuikiPT/AuraForwardBlocker",
   "author": "GuikiPT",
-  "license": "",
+  "license": "UNLICENSED",
+  "scripts": {
+    "start": "node start.js",
+    "deploy": "node slashDeployer.js"
+  },
   "dependencies": {
     "axios": "^1.7.7",
     "better-logging": "^5.0.0",
@@ -14,6 +18,7 @@
     "figlet-promised": "^1.0.0",
     "fs": "^0.0.1-security",
     "moment": "^2.30.1",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "prompts": "^2.4.2"
   }
 }
