--- a/package.json
+++ b/package.json
@@ -17,8 +17,11 @@
     "dotenv": "^16.4.5",
     "figlet-promised": "^1.0.0",
     "fs": "^0.0.1-security",
+    "mariadb": "^3.3.2",
     "moment": "^2.30.1",
+    "mysql2": "^3.11.3",
     "path": "^0.12.7",
-    "prompts": "^2.4.2"
+    "prompts": "^2.4.2",
+    "sequelize": "^6.37.4"
   }
 }
